plugins {
    id("java")
    id("se.solrike.sonarlint") version "2.1.0"
}

group = "me.harry0198.infoheads.core"
version = "2.5.0"
java {
    sourceCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
}

val junitVersion = "5.9.1"
val mockitoVersion = "5.14.0"
val snakeYamlVersion = "2.2"
val gsonVersion = "2.11.0"
val slf4jVersion = "1.7.25"

dependencies {
    testImplementation(platform("org.junit:junit-bom:$junitVersion"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testImplementation("org.mockito:mockito-core:$mockitoVersion")

    // https://mvnrepository.com/artifact/org.yaml/snakeyaml
    implementation("org.yaml:snakeyaml:$snakeYamlVersion")

    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    implementation("com.google.code.gson:gson:$gsonVersion")
    implementation("org.slf4j:slf4j-api:$slf4jVersion")
}

tasks.sonarlintMain {
    dependencies {
        sonarlintPlugins("org.sonarsource.java:sonar-java-plugin:7.30.1.34514")
    }
    reports {
        create("xml") {
            enabled.set(true)
        }
    }
}

tasks.test {
    useJUnitPlatform()
    jvmArgs( "--add-opens", "java.base/java.lang=ALL-UNNAMED")
}